# ML-FACTORY-BRIEF

./: .env  README.md  docker-compose.yml  pyproject.toml
docs/: pyproject.toml
docs/source/: conf.py
src/: mlflow.db
src/api/: Dockerfile  main.py
src/front/: Dockerfile  app.py
src/train/: Dockerfile  train.py
